TODO: Fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* TEMP FIX*/ 
-/* TODO: */
-h1 {
+
+.font-jersey {
     font-family: 'Jersey 10', sans-serif;
 }
 
